Partial_14Dec2021/force-app/main/default/objects/Answer_Option__c/Answer_Option__c.object-meta.xml
<CustomObject>
    <label>Answer Option</label>
    <nameField>
        <displayFormat>Answer Option-{0000}</displayFormat>
        <label>Answer Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>