Partial_14Dec2021/force-app/main/default/objects/Answer_Option__c/fields/Custom_Question__c.field-meta.xml
<CustomField>
    <fullName>Custom_Question__c</fullName>
    <description>Is us used to capture custom question dependent questions value.</description>
    <label>Custom Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>