Partial_14Dec2021/force-app/main/default/objects/Answer_Option__c/fields/Custom_Value__c.field-meta.xml
<CustomField>
    <fullName>Custom_Value__c</fullName>
    <description>It is used to capture custom questions value.</description>
    <label>Custom Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>