Partial_14Dec2021/force-app/main/default/objects/Answer_Option__c/fields/Master_Question__c.field-meta.xml
<CustomField>
    <fullName>Master_Question__c</fullName>
    <description>To display value of selected master question in the child object record.</description>
    <formula>Survey_Details__r.Master_Questions__r.Question_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Question</label>
    <type>Text</type>
</CustomField>