Partial_14Dec2021/force-app/main/default/objects/Answer_Option__c/fields/Other_Top_Brand__c.field-meta.xml
<CustomField>
    <fullName>Other_Top_Brand__c</fullName>
    <description>This will capture rating of top brand(other than Ashirvad).</description>
    <label>Other Top Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>