Partial_14Dec2021/force-app/main/default/objects/Answer_Option__c/fields/Survey_Details__c.field-meta.xml
<CustomField>
    <fullName>Survey_Details__c</fullName>
    <description>It is used to capture Question Id from Survey Details(Parent) object.</description>
    <label>Survey Details</label>
    <referenceTo>Survey_Details__c</referenceTo>
    <relationshipLabel>Answer Options</relationshipLabel>
    <relationshipName>Answer_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>